--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -174,9 +174,14 @@
     }
 
     .col-taxable {
-        background-color: #f5f7fa; /* light theme highlight */
+        background-color: cadetblue; /* light theme highlight */
         border-radius: 6px;
         padding: 4px 8px;
+    }
+
+    .dark-theme .col-taxable {
+        background-color: #2a2a2a; /* dark theme highlight */
+        color: #E2E8F0;
     }
 </style>
 
